--- a/styles/index.scss
+++ b/styles/index.scss
@@ -18,3 +18,7 @@
         display: none;
     }
 }
+
+.textfield {
+    color: #222e43;
+}
